# rustiff

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
examples/: decode_ex1.rs
src/: byte.rs  data.rs  decode.rs  dir.rs  element.rs  encode.rs  error.rs  header.rs  ifd.rs  image.rs  lib.rs  macros.rs  pos.rs  possible.rs  reader.rs  res.rs  tag.rs  tool.rs  val.rs
src/bef/: data.rs  decode.rs  dir.rs  encode.rs  num.rs  tag.rs  val.rs
tests/: decode.rs
tests/images/: 002_cmyk_tone_interleave_ibm_lzw.tif  004_incorrect_version_number.tif  006_cmyk_tone_interleave_ibm_uncompressed.tif  007_cmyk_tone_interleave_ibm_lzw.tif  008_cmyk_tone_interleave_mac_lzw.tif  010_cmyk_2layer.tif  xxx_cmyk_tone_channel_mac_lzw.tif
