[package]
name = "rustiff"
version = "0.1.2"
authors = ["335g <actionstar620@yahoo.co.jp>"]
repository = "https://github.com/335g/rustiff"
keywords = ["tiff", "tif", "image", "decode", "encode"]
license-file = "LICENSE-MIT"
readme = "README.md"
description = "TIFF decoding/encoding library in Rust."

[dependencies]
byteorder = "1.2"
lzw = "0.10"
